--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>hgkim916.github.io</title>
     </head>
+    <body>
         <h1>Hello world!</h1>
         <p>text</p>
     </body>
+</html>
